welcome.lessons.welcome.loopdowhile.Poucet1.scala.error
Poucet:4: error: '(' expected but identifier found.
  for (i<-1 to 5) {avance; if estSurBaggle() {FoundBaggles=FoundBaggles+1}}
                              ^Poucet:4: error: illegal start of simple expression
  for (i<-1 to 5) {avance; if estSurBaggle() {FoundBaggles=FoundBaggles+1}}
                                                                          ^