welcome.lessons.welcome.loopdowhile.Poucet1.scala.code
var FoundBaggles:Int=0
while (sortieTrouvee()==false) 
{
  for (i<-1 to 5) {avance; if estSurBaggle() {FoundBaggles=FoundBaggles+1}}
  if (FoundBaggles<3) {gauche;FoundBaggles=0}
	else {droite();FoundBaggles=0}	
}